@@ -7,6 +7,7 @@ ver 0.22.7 (not yet released)
   - curl: don't use glibc extension
 * output
   - wasapi: add algorithm for finding usable audio format
+  - wasapi: use default device only if none was configured
 
 ver 0.22.6 (2021/02/16)
 * fix missing tags on songs in queue
